--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body.dark {
   align-items: center;  /* Centra verticalmente los elementos internos */ 
   column-gap: 10px; /* Espacio entre las columnas */ 
   font-size: 22px; /* Tamaño de fuente de 22px */
-  font-weight: 500;  /* Grosor de fuente de 500 */ 
+  font-weight: 500;   /* Grosor de fuente de 500 */ 
   color: var(--blue-color); /* color de texto con las variables creadas anteriormente */  
 }
 
@@ -270,41 +270,105 @@ body.dark {
     left: -100%;
   }
 }
-.body{
+/* Contenido principal */
+.body {
+  padding: 30px;
+  border-radius: 10px;
+    
+}
+
+.panel {
   width: 80%;
-  margin-left: 20%;
-  margin-top: 3%;
-  padding: 40px;
-  min-height: 500px;
-  
+  margin-left: 20%;   
+  margin-top: 3%; 
+  padding: 1px;
+  box-shadow: none;
+  border-radius: 10px;
+    
 }
-.panel{
-  border: 1px solid #e7f2fd;
-  border-radius: 4px;
-  padding: 10px;
-  width: 90%;
+/* estilos para el form//////////////////////////////*/
+.form {
+  background-color: var(--white-color);
+  max-width: 1000px;
   margin: 0 auto;
+  padding: 30px;   
+  border-radius: 10px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.1);  
+  font-size: 20px;
+  color: var(--grey-color);
+  white-space: nowrap;
 }
-.form input[type="text"],.form input[type="password"], select{
-  width: 90%;
-  padding: 8px;
-  border-radius:4px;
-  border:1px solid #d3d3d3;
-  margin-bottom: 2px;
-  margin-top: 2px;
+
+.form h4 {
+  color: var(--blue-color);  
+  text-align: center;
+  margin-bottom: 10px;
+    
 }
-.number{
-  padding: 6px;
-  border-radius:4px;
-  border:1px solid #d3d3d3;
-  margin-bottom: 4px;
+
+.form-group {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  flex: 1;
   margin-top: 4px;
+  text-align: center;
+  padding-right: 10px; 
 }
+
+.form-group input,
+.form-group select {
+  flex: 2;  
+  padding: 10px;
+  border: 2px solid var(--grey-color-light);  
+  border-radius: 5px;
+  color: var(--grey-color);
+  margin-right: 20%;
+  white-space: nowrap;
+}
+
+.genero, 
+.seccion {
+  display:flex; 
+  align-items: center;
+  column-gap: 15px;
+  margin: 20px;
+  margin-left: 34%;
+}
+
+.genero label,
+.seccion label {
+  margin-left: 10px; 
+}
+.form button[type="submit"] {
+ 
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  background: var(--blue-color); 
+  color: #fff;
+}
+
+@media (max-width: 600px) {
+
+  .form-group {
+    flex-direction: column;
+  } 
+  
+  .form-group label {
+    text-align: left;
+  }
+
+}
+
+/*////////////////////////////////////////////////////*/
 
 .b_b, .btn-link{
   padding: 8px;
   border-radius:4px;
-  border:1px solid #d3d3d3;
+  border:1px solid #d3d3d3; 
   background: #007bff;
   color:#080808;
   font-weight: bold;
@@ -316,9 +380,11 @@ body.dark {
   
 }
 
-.b_b[type=reset]{ 
+.b_b[type=reset]{
+  display: block; 
   background: #d6d8db;
   color:#1b1e21; 
+  width: 100%; 
 }
 span.error{
   color: red;
@@ -335,9 +401,10 @@ span.success{
 }
 .table{
   width: 100%;
-  background-color: #fff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
-  border-radius: 6px;
+  height: 100%;
+  background-color: var(--white-color); 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px; 
   overflow: hidden;
   border-top:1px solid #ddd;
   border-left:1px solid #ddd;
@@ -352,13 +419,15 @@ span.success{
 
 } 
 .text-center{
+  color: var(--blue-color);  
   text-align: center;
+  margin-bottom: 10px;
 }
 
 /* estilos para el graficos y secciones */
 
 .card {
-  width: 100%;
+  width: 100%; 
   background-color: #fff;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.16);
   border-radius: 6px;
